# hazeron-exploration-parser

./: CMakeLists.txt  Makefile  README.md  line_process.c  location.c  location_new.c  main.c  process.c  read_trace.sh  splitter.h  trace.c  utilities.c  xml_parser.c
header/: location.h  location_new.h  main.h  process.h  structure.h  trace.h  utilities.h  xml_parser.h
